--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.profile_main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.origin-cuisine,.cuisines-to-try{
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  margin-top: 1rem;
+}
+
+.feed{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  margin: auto
+}
+
+.food-btn{
+  border-radius: 5px;
+  background-color: skyblue;
+  padding: 0.5rem 0.8rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin: 0.3rem;
+  cursor: pointer;
+}
+
+.selected {
+  background-color: #0077b6;
+  color: #fff;
+}
+
+.card {
+  display: flex;
+  border: 2px solid #0077b6;
+  border-radius: 5px;
+  margin: 0.2rem;
+  width: 300px;
+}
+
+
+.invite {
+  border-radius: 5px;
+  background-color: skyblue;
+}
